--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,20 +8,23 @@
     android:orientation="vertical"
     android:padding="18dp"
     android:gravity="center_horizontal"
+    android:background="#4CAF50"
     tools:context=".MainActivity">
 
     <!-- Cronómetro -->
+
+    <!-- Botones del cronómetro -->
+
     <TextView
         android:id="@+id/tvTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="00:00:000"
-        android:textSize="48sp"
-        android:textStyle="bold"
         android:layout_marginBottom="32dp"
-        android:textColor="@android:color/black" />
+        android:text="00:00:000"
+        android:textColor="@android:color/black"
+        android:textSize="48sp"
+        android:textStyle="bold" />
 
-    <!-- Botones del cronómetro -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,6 +39,7 @@
             android:layout_weight="1"
             android:text="Inicio"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             android:layout_marginEnd="8dp"
             android:backgroundTint="@android:color/holo_green_dark" />
 
@@ -48,6 +52,7 @@
             android:textAllCaps="false"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
+            android:textColor="@color/white"
             android:backgroundTint="@android:color/holo_red_dark" />
 
         <Button
@@ -59,6 +64,7 @@
             android:textAllCaps="false"
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
+            android:textColor="@color/white"
             android:backgroundTint="@android:color/holo_orange_dark" />
 
         <Button
@@ -69,6 +75,7 @@
             android:text="Lap"
             android:textAllCaps="false"
             android:layout_marginStart="8dp"
+            android:textColor="@color/white"
             android:backgroundTint="@android:color/holo_blue_dark" />
 
     </LinearLayout>
